# allure-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
allure-rust/: Cargo.toml
allure-rust-core/: Cargo.toml
allure-rust-core/src/: attachment.rs  lib.rs  models.rs  writer.rs
allure-rust-macros/: Cargo.toml
allure-rust-macros/src/: lib.rs
allure-rust/src/: lib.rs
example/: Cargo.toml
example/tests/: test_assertions.rs  test_attachments.rs  test_statuses.rs  test_steps.rs  test_suites.rs
test-suite/: Cargo.toml
test-suite/src/: lib.rs
test-suite/tests/: attachment_tests.rs  context_tests.rs  integration_tests.rs  writer_tests.rs
