[package]
name = "allure-rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
allure-rust-macros = { path = "../allure-rust-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
thread_local = "1.1"
