[package]
name = "allure-rust-macros"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Kirill Furtikov"]
homepage = "https://github.com/KirillFurtikov/allure-rust"
keywords = ["allure", "testing", "test-report", "test-framework"]
categories = ["development-tools::testing"]
description = "Allure test report generation library for Rust"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0"