[package]
name = "allure-rust"
version = "0.1.0"
edition = "2021"
description = "Allure test report generation library for Rust"
license = "MIT"
authors = ["Kirill Furtikov"]
repository = "https://github.com/KirillFurtikov/allure-rust"
homepage = "https://github.com/KirillFurtikov/allure-rust"
keywords = ["allure", "testing", "test-report", "test-framework"]
categories = ["development-tools::testing"]
readme = "README.md"

[dependencies]
allure-rust-core = { path = "../allure-rust-core", version = "0.1.0" }

[dev-dependencies]
allure-rust-core = { path = "../allure-rust-core" }
